--- a/centos/7.4.1708/Dockerfile
+++ b/centos/7.4.1708/Dockerfile
@@ -13,5 +13,4 @@ RUN set -xe; \
 	ssh-keygen -f /etc/ssh/ssh_host_ecdsa_key -N '' -t ecdsa ; \
 	ssh-keygen -f /etc/ssh/ssh_host_ed25519_key -N '' -t ed25519 ; 
 	
-
-CMD /usr/sbin/sshd -D	
+ENTRYPOINT /usr/sbin/sshd && bash
