--- a/debian/8.9/Dockerfile
+++ b/debian/8.9/Dockerfile
@@ -5,7 +5,7 @@ RUN set -xe;\
    apt-get -y install ssh;\
    apt-get -y install python;\
    echo "root:admin" | chpasswd ;\
-   sed -i -e "s/#PermitRootLogin.*$/PermitRootLogin yes/" /etc/ssh/sshd_config; \
+   sed -i -e "s/PermitRootLogin.*$/PermitRootLogin yes/" /etc/ssh/sshd_config; \
    sed -i -e "s/#PasswordAuthentication.*$/PasswordAuthentication yes/" /etc/ssh/sshd_config;
    
 ENTRYPOINT service ssh start && bash
